<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_staff_utsav"
        android:icon="@drawable/ic_icon"

        android:title="@string/title_staff_utsav" />

    <item
        android:id="@+id/navigation_day1"
        android:icon="@drawable/ic_icon"
        android:title="@string/title_day1" />

    <item
        android:id="@+id/navigation_day2"
        android:icon="@drawable/ic_icon"
        android:title="@string/title_day2" />
    <item
        android:id="@+id/navigation_day3"
        android:icon="@drawable/ic_icon"
        android:title="@string/title_day3" />
    <item
        android:id="@+id/navigation_day4"
        android:icon="@drawable/ic_icon"
        android:title="@string/title_day4" />

</menu>
